<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/user_select_text_view"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:layout_marginRight="50dp"
            android:fontFamily="@font/balsamiq_sans"
            android:text="@string/select_your_role"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />


        <androidx.cardview.widget.CardView
            android:id="@+id/role_teacher"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:elevation="100dp"
            app:cardBackgroundColor="#F4EEE1"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/teacher_logo"
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/teacher" />

                <TextView
                    android:id="@+id/teacher_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/dancing_script"
                    android:padding="10dp"
                    android:text="@string/teacher"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/role_student"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:elevation="100dp"
            app:cardBackgroundColor="#F4EEE1"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/student_logo"
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/student" />

                <TextView
                    android:id="@+id/student_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/dancing_script"
                    android:padding="10dp"
                    android:text="@string/student"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/mybutton"
            android:fontFamily="@font/balsamiq_sans"
            android:text="Next"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>